--- a/fedemy/package.json
+++ b/fedemy/package.json
@@ -11,9 +11,11 @@
         "axios": "^0.27.2",
         "bootstrap-vue": "^2.22.0",
         "core-js": "^3.8.3",
+        "nprogress": "^0.2.0",
         "vue": "^2.6.14",
         "vue-router": "^3.5.1",
-        "vue-sessionstorage": "^1.0.0"
+        "vue-sessionstorage": "^1.0.0",
+        "vue-simple-alert": "^1.1.1"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
