--- a/fedemy/package.json
+++ b/fedemy/package.json
@@ -8,8 +8,8 @@
     "start": "vue-cli-service serve"
   },
   "engines": {
-    "node": "18.x",
-    "npm":"8.x"
+    "node": "18.1.0",
+    "npm":"8.8.0"
   },
   "dependencies": {
     "axios": "^0.27.2",
