--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "axios": "^0.27.2",
         "bootstrap-vue": "^2.22.0",
+        "connect-history-api-fallback": "^2.0.0",
         "core-js": "^3.8.3",
         "express": "^4.18.2",
         "nprogress": "^0.2.0",
